--- a/css/main.css
+++ b/css/main.css
@@ -49,7 +49,7 @@
     align-items:flex-end;
     justify-content: space-between;
 }
-.div_4, .div_5, .div_6{
+.div_2{
     padding: 50px 50px;
     margin-right: 10px;
     background-color:blueviolet;
